--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.4.0",
+    "axios": "^1.3.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
+    "nsfwjs": "^2.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
