--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^4.4.0",
+    "@tensorflow/tfjs-node": "4.4.0",
     "axios": "^1.3.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
